--- a/pages/galeryPs4.html
+++ b/pages/galeryPs4.html
@@ -20,7 +20,7 @@
 
     <header>
         <div class="main-menu">
-            <a href="/index.html" class="logo">
+            <a href="https://jojopose448.github.io/Game_shop/" class="logo">
                 <img src="/images/logo.png" alt="PlayЛіцензія">
             </a>
             
