fixed io page again

--- a/pages/galeryPs5.html
+++ b/pages/galeryPs5.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayЛіцензія Ps5</title>
-    <link rel="stylesheet" href="/styles/stylePs5.css">
+    <link rel="stylesheet" href="../styles/stylePs5.css">
+
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1JFZ9E30GY"></script>
 <script>
