--- a/pages/galeryPs4.html
+++ b/pages/galeryPs4.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayЛіцензія Ps4</title>
-    <link rel="stylesheet" href="/Game_shop/styles/stylePs4.css">
+    <link rel="stylesheet" href="../styles/stylePs4.css">
+
     <!-- Google tag (gtag.js) -->
 <script async src=""></script>
 <script>
