fixed io page agai213n

--- a/pages/galeryPs4.html
+++ b/pages/galeryPs4.html
@@ -22,7 +22,7 @@
     <header>
         <div class="main-menu">
             <a href="https://jojopose448.github.io/Game_shop/" class="logo">
-                <img src="../images/logo.png" alt="PlayЛіцензія">
+                <img src="./images/logo.png" alt="PlayЛіцензія">
             </a>
             
             <a href="#" class="social">
