--- a/pages/galeryPs5.html
+++ b/pages/galeryPs5.html
@@ -22,7 +22,7 @@
     <header>
         <div class="main-menu">
             <a href="https://jojopose448.github.io/Game_shop/" class="logo">
-                <img src="../images/logo.png" alt="PlayЛіцензія">
+                <img src="./images/logo.png" alt="PlayЛіцензія">
             </a>
             
             <a href="#" class="social">
@@ -46,7 +46,7 @@
             <div class="phone-dropdown">
   <a href="./pages/galery.html" class="dropbtn">Каталог</a>
   <div class="dropdown-content">
-    <a href="/pages/galeryPs4.html">PlayStation 4</a>
+    <a href="./pages/galeryPs4.html">PlayStation 4</a>
   </div>
 </div>
 
