fixed io page agai21354n

--- a/pages/galeryPs5.html
+++ b/pages/galeryPs5.html
@@ -46,7 +46,7 @@
             <div class="phone-dropdown">
   <a href="./pages/galery.html" class="dropbtn">Каталог</a>
   <div class="dropdown-content">
-    <a href="./galeryPs4.html">PlayStation 4</a>
+    <a href="./pages/galeryPs4.html">PlayStation 4</a>
   </div>
 </div>
 
