fixed io page agai21354678n

--- a/pages/galeryPs4.html
+++ b/pages/galeryPs4.html
@@ -46,7 +46,7 @@
             <div class="phone-dropdown">
   <a href="./pages/galery.html" class="dropbtn">Каталог</a>
   <div class="dropdown-content">
-    <a href="/Game_shop/pages/galeryPs5.html">PlayStation 5</a>
+    <a href="galeryPs5.html">PlayStation 5</a>
   </div>
 </div>
             
