--- a/pages/galeryPs5.html
+++ b/pages/galeryPs5.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayЛіцензія Ps5</title>
+    <link rel="icon" href="../images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles/stylePs5.css">
 
     <!-- Google tag (gtag.js) -->
