added working cart

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </a>
 
             <div class="phone-dropdown">
-  <a href="./pages/delivery.html" class="dropbtn">Контакти</a>
+  <a href="index.html" class="dropbtn">Контакти</a>
   <div class="dropdown-content">
     <p href="tel:+380438465690">+380 43 846 5690</p>
     <p href="tel:+8880880808888">+888 088 080 8888</p>
@@ -43,16 +43,20 @@
 </div>
 
             <div class="phone-dropdown">
-  <a href="./pages/galery.html" class="dropbtn">Каталог</a>
+  <a href="index.html" class="dropbtn">Каталог</a>
   <div class="dropdown-content">
     <a href="./pages/galeryPs4.html">PlayStation 4</a>
     <a href="./pages/galeryPs5.html">PlayStation 5</a>
   </div>
 </div>
 
-        </div>
-        
+
+        <div class="phone-dropdown">
+    <a href="./pages/basket.html" class="dropbtn">Корзина</a>
     </header>
+</div>
+        </div>
+
 
     <main>
         <section class="hero">
@@ -63,7 +67,7 @@
                 'event_category': 'ecommerce',
                 'event_label': 'show details',
               })">
-                <a href="./pages/gallery.html" class="btn main-btn" >Замовити</a>
+                <a href="./pages/basket.html" class="btn main-btn" >Замовити</a>
             </button>
             
         </div>    
